<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/request_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rental_id" />

        <TextView
            android:id="@+id/car_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_id" />

        <TextView
            android:id="@+id/user_id_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id" />

        <TextView
            android:id="@+id/sdate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/edate_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/total_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status" />

    </LinearLayout>
</androidx.cardview.widget.CardView>