<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03184E"
    android:backgroundTint="#020D29"
    tools:context=".ReturnCar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF243150"
        android:orientation="vertical">

        <TextView
            android:id="@+id/l_title"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/alike_angular"
            android:gravity="center"
            android:text="@string/request_details"
            android:textColor="#FFFFFFFF"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="568dp"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextDetailsStyle"
                    android:text="@string/car_id" />

                <EditText
                    android:id="@+id/txt_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:text="@string/user_id"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_sdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextDetailsStyle"
                    android:text="@string/start_date" />

                <EditText
                    android:id="@+id/txt_sdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_edate"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextDetailsStyle"
                    android:text="@string/end_date" />

                <EditText
                    android:id="@+id/txt_edate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_price"
                    style="@style/CustomTextDetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <EditText
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center">


                <Button
                    android:id="@+id/bt_confirm"
                    style="@style/CustomAdminButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_Vhome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00021032"
                app:srcCompat="@drawable/icons8_home_30" />

            <ImageButton
                android:id="@+id/bt_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00021032"
                app:srcCompat="@drawable/icons8_view_24" />

            <ImageButton
                android:id="@+id/bt_Vrep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_report_50" />


            <ImageButton
                android:id="@+id/bt_Vupdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_edit_24" />

            <ImageButton
                android:id="@+id/bt_Vpay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_us_dollar_circled_50" />

            <ImageButton
                android:id="@+id/bt_return"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_car_rental_30" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>