<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03184E"
    android:backgroundTint="#243150"
    android:foregroundTint="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/l_title"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/alike_angular"
            android:gravity="center"
            android:text="@string/update_a_car"
            android:textColor="#FFFFFFFF"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="568dp"
            android:gravity="center">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <Spinner
                    android:id="@+id/sp_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:backgroundTintMode="src_atop"
                    android:foregroundTint="#FFFFFF" />

                <SearchView
                    android:id="@+id/search_model"
                    android:layout_width="193dp"
                    android:layout_height="34dp"
                    android:background="#2DFFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="286dp"
                android:layout_height="158dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/bt_search"
                        android:layout_width="108dp"
                        android:layout_height="34dp"
                        android:backgroundTint="#FFFFFF"
                        android:fontFamily="@font/alike_angular"
                        android:text="@string/search"
                        android:textColor="#020D29"
                        android:textColorHint="#020D29"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/car_im"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#4FFFFFFF"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                </LinearLayout>

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_car"
                    style="@style/CustomTextDetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:text="@string/car_id" />

                <EditText
                    android:id="@+id/txt_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextDetailsStyle"
                    android:text="@string/brand" />

                <EditText
                    android:id="@+id/txt_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_model"
                    style="@style/CustomTextDetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model" />

                <EditText
                    android:id="@+id/txt_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_price"
                    style="@style/CustomTextDetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
 />

                <EditText
                    android:id="@+id/txt_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/l_color"
                    style="@style/CustomTextDetailsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color" />

                <EditText
                    android:id="@+id/txt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView

                    android:id="@+id/l_status"
                    style="@style/CustomTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alike_angular"
                    android:text="@string/status"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:gravity="center">


                <Button
                    android:id="@+id/bt_update"
                    style="@style/CustomAdminButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update" />
            </TableRow>
        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_Vhome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00021032"
                app:srcCompat="@drawable/icons8_home_30" />

            <ImageButton
                android:id="@+id/bt_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00021032"
                app:srcCompat="@drawable/icons8_view_24" />

            <ImageButton
                android:id="@+id/bt_Vrep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_report_50" />


            <ImageButton
                android:id="@+id/bt_Vupdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_edit_24" />

            <ImageButton
                android:id="@+id/bt_Vpay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_us_dollar_circled_50" />

            <ImageButton
                android:id="@+id/bt_return"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#0003184E"
                app:srcCompat="@drawable/icons8_car_rental_30" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>