<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CarViewScreen">


    <Spinner
        android:id="@+id/spinnerCarBrand"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:hint="@string/select_car_brand" />


    <Button
        android:id="@+id/btnSearch"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerCarBrand"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="-199dp"
        android:text="Apply Filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcViewCars"
        android:layout_width="398dp"
        android:layout_height="307dp"
        android:layout_below="@+id/btnSearch"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/adminName"
        style="@style/CustomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:text="you are signed in as" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcViewCars"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_car" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rcViewCars"
        android:layout_alignEnd="@+id/btnAdd"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="-141dp"
        android:text="@string/delete_car" />

    <ImageButton
        android:id="@+id/homeBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="650dp"
        app:srcCompat="@drawable/icons8_home_30" />


    <ImageButton
        android:id="@+id/adminBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="650dp"
        android:layout_alignRight="@+id/homeBtn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="-80dp"
        app:srcCompat="@drawable/icons8_admin_50" />


</RelativeLayout>

